--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -4,6 +4,10 @@
     <title>Responsive Carousel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="../js/jquery-1.11.1.js"></script>
+    <script src="../js/jquery.mobile.custom.js"></script>
+    <script src="../js/chase-slide-17.js"></script>
+    <link href="../css/chase-slide-17.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
