--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-
+    <figure class="container">
+      <div class="header">
+        <img src="../chase-logos/chase-logo.png" alt="Chase">
+      </div>
+    </figure>
   </body>
 </html>
