Add image folder.

--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -13,7 +13,7 @@
   <body>
     <figure class="container">
       <div class="header">
-        <img src="../chase-logos/chase-logo.png" alt="Chase">
+        <img src="../assets/celadon.png" alt="Celadon">
       </div>
     </figure>
   </body>
