--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -15,6 +15,43 @@
       <div class="header">
         <img src="../assets/celadon.png" alt="Celadon">
       </div>
+      <div class="carousel">
+        <ul class="active">
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+        </ul>
+      </div>
     </figure>
   </body>
 </html>
