--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -6,8 +6,8 @@
 
     <script src="../js/jquery-1.11.1.js"></script>
     <script src="../js/jquery.mobile.custom.js"></script>
-    <script src="../js/chase-slide-17.js"></script>
-    <link href="../css/chase-slide-17.css" rel="stylesheet" type="text/css">
+    <script src="../js/responsive-carousel.js"></script>
+    <link href="../css/responsive-carousel.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
