--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -18,21 +18,20 @@
       <div class="carousel">
         <ul class="active">
           <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/domio-logo_thumb.png" alt="Domio"></li>
+          <li><img src="../assets/help-logo_thumb.png" alt="Help"></li>
+          <li><img src="../assets/car_logo_PNG1667.png" alt="Volkswagen"></li>
+          <li><img src="../assets/car_logo_PNG1666.png" alt="Ford"></li>
+          <li><img src="../assets/BMW_logo.png" alt="BMW"></li>
+          <li><img src="../assets/car_logo_PNG1658.png" alt="Volvo"></li>
+          <li><img src="../assets/jaguar-logo.png" alt="Jaguar"></li>
+          <li><img src="../assets/mitsubishi.png" alt="Mitsubishi"></li>
+          <li><img src="../assets/Volvo.png" alt="Volvo"></li>
+          <li><img src="../assets/OPEL.png" alt="OPEL"></li>
+          <li><img src="../assets/Mercedes_Benz_logo.png" alt="Mercedes Benz"></li>
+          <li><img src="../assets/Ferrari.png" alt="Ferrari"></li>
+          <li><img src="../assets/Audi.png" alt="Audi"></li>
+          <li><img src="../assets/Skoda.png" alt="Skoda"></li>
           <li><img src="../assets/celadon.png" alt="Celadon"></li>
           <li><img src="../assets/celadon.png" alt="Celadon"></li>
           <li><img src="../assets/celadon.png" alt="Celadon"></li>
