Add more logos.

--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -32,23 +32,12 @@
           <li><img src="../assets/Ferrari.png" alt="Ferrari"></li>
           <li><img src="../assets/Audi.png" alt="Audi"></li>
           <li><img src="../assets/Skoda.png" alt="Skoda"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/celadon.png" alt="Celadon"></li>
+          <li><img src="../assets/Peugeot-logo.png" alt="Peugeot"></li>
+          <li><img src="../assets/car_logo_PNG1644.png" alt="Chevrolet"></li>
+          <li><img src="../assets/Kawasaki-Logo-2.png" alt="Kawasaki"></li>
+          <li><img src="../assets/Ducati.png" alt="Ducati"></li>
+          <li><img src="../assets/McLaren.png" alt="McLaren"></li>
+          <li><img src="../assets/Bugatti_logo.png" alt="Bugatti"></li>
         </ul>
       </div>
     </figure>
