Add more logos.

--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -18,8 +18,6 @@
       <div class="carousel">
         <ul class="active">
           <li><img src="../assets/celadon.png" alt="Celadon"></li>
-          <li><img src="../assets/domio-logo_thumb.png" alt="Domio"></li>
-          <li><img src="../assets/help-logo_thumb.png" alt="Help"></li>
           <li><img src="../assets/car_logo_PNG1667.png" alt="Volkswagen"></li>
           <li><img src="../assets/car_logo_PNG1666.png" alt="Ford"></li>
           <li><img src="../assets/BMW_logo.png" alt="BMW"></li>
@@ -28,16 +26,22 @@
           <li><img src="../assets/mitsubishi.png" alt="Mitsubishi"></li>
           <li><img src="../assets/Volvo.png" alt="Volvo"></li>
           <li><img src="../assets/OPEL.png" alt="OPEL"></li>
+          <li><img src="../assets/help-logo_thumb.png" alt="Help"></li>
           <li><img src="../assets/Mercedes_Benz_logo.png" alt="Mercedes Benz"></li>
-          <li><img src="../assets/Ferrari.png" alt="Ferrari"></li>
+          <li><img src="../assets/yamaha.png" alt="Yamaha"></li>
           <li><img src="../assets/Audi.png" alt="Audi"></li>
           <li><img src="../assets/Skoda.png" alt="Skoda"></li>
           <li><img src="../assets/Peugeot-logo.png" alt="Peugeot"></li>
+          <li><img src="../assets/domio-logo_thumb.png" alt="Domio"></li>
           <li><img src="../assets/car_logo_PNG1644.png" alt="Chevrolet"></li>
           <li><img src="../assets/Kawasaki-Logo-2.png" alt="Kawasaki"></li>
           <li><img src="../assets/Ducati.png" alt="Ducati"></li>
           <li><img src="../assets/McLaren.png" alt="McLaren"></li>
           <li><img src="../assets/Bugatti_logo.png" alt="Bugatti"></li>
+          <li><img src="../assets/suzuki.png" alt="Suzuki"></li>
+          <li><img src="../assets/Honda-logo.png" alt="Honda"></li>
+          <li><img src="../assets/triumph.png" alt="Triumph"></li>
+          <li><img src="../assets/fiat.png" alt="Fiat"></li>
         </ul>
       </div>
     </figure>
