Change header logo.

--- a/html/responsive-carousel.html
+++ b/html/responsive-carousel.html
@@ -13,7 +13,7 @@
   <body>
     <figure class="container">
       <div class="header">
-        <img src="../assets/celadon.png" alt="Celadon">
+        <img src="../assets/apple-pay-logo.png" alt="Apple Pay">
       </div>
       <div class="carousel">
         <ul class="active">
